# python-script-background-music

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  all-documents.html  apidocs-help.html  classIndex.html  example.py  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pydoctor.ini  pyproject.toml  renovate.json  requirements-dev.txt  script_background_music.context.BackgroundMusicContext.html  script_background_music.context.html  script_background_music.html  script_background_music.play.PlayThread.html  script_background_music.play.html  script_background_music.songs.html  script_background_music.vendor.html  script_background_music.vendor.playsound.PlaysoundException.html  script_background_music.vendor.playsound.html  searchindex.json  setup.py  sonar-project.properties  undoccedSummary.html
.circleci/: config.yml
.github/images/: elevator.source.txt
elevator_music/: __init__.py
script_background_music/: __init__.py  context.py  play.py
script_background_music/songs/: SOURCES.md  __init__.py
